Trying to fox messylab.com

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "A free, open-source IDE for Assembly Languages"
 logo: 120x120.gif
 teaser: 400x250.gif
 locale: en_US
-url: /messylab
+url:
 
 # Jekyll configuration
 
